--- a/ganmademo/public/index.html
+++ b/ganmademo/public/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ganmademo</title>
+
+ <style>
+ .lbt .el-carousel__container{
+   height: 100%;
+ }
+ .lbt .el-carousel__indicator button{
+   border-radius: 50%;
+   width: 5px;
+   height: 5px;
+ }
+ </style>
   </head>
-  <body>
+  <body style="margin: 0;">
     <noscript>
       <strong>We're sorry but ganmademo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
